force-app/main/default/objects/Level_4_Categorisation_Code_for_Contract__c/Level_4_Categorisation_Code_for_Contract__c.object-meta.xml
<CustomObject>
    <label>Level 4 Categorisation Code for Contract</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Level 4 Categorisation Code for Contract</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>