force-app/main/default/objects/Level_4_Categorisation_Code_for_Contract__c/fields/CAS_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CAS_Sub_Category__c</fullName>
    <formula>Code__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides the CAS sub category for the code selected</inlineHelpText>
    <label>CAS Sub Category</label>
    <type>Text</type>
</CustomField>