force-app/main/default/objects/Level_4_Categorisation_Code_for_Contract__c/fields/CCS_Contract__c.field-meta.xml
<CustomField>
    <fullName>CCS_Contract__c</fullName>
    <label>CCS Contract</label>
    <referenceTo>CCS_Contract__c</referenceTo>
    <relationshipName>CAS_Sub_Category_Contract_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>