force-app/main/default/objects/Level_4_Categorisation_Code_for_Contract__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <inlineHelpText>This provides the CPV code for the auto-link to Contracts Finder.</inlineHelpText>
    <label>Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category__c.CategoryType__c</field>
            <operation>equals</operation>
            <value>Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Level 4 Categorisation Code for Contract</relationshipLabel>
    <relationshipName>CAS_Sub_Categories_for_Contract</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>