force-app/main/default/objects/Level_4_Categorisation_Code_for_Contract__c/fields/Lvl_4_Cat_Code_For_Contract_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Lvl_4_Cat_Code_For_Contract_External_Id__c</fullName>
    <description>External Id (Not generated by Salesforce) used for reference during upsert of external data</description>
    <externalId>true</externalId>
    <label>Lvl 4 Cat Code For Contract External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>